--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&family=Righteous&display=swap');
+
 .invisible {
   display: none;
+}
+
+#todo_app {
+  font-family: 'Atkinson Hyperlegible', sans-serif;
+}
+
+#workright_title {
+  font-family: 'Righteous', cursive;
+  font-size: 64px;
+  margin-top: 40px;
 }
